--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 
 <header>
     <h1>Thermofluid Lab</h1>
-    <p>Virtual experiments using PINN and classical thermofluid concepts</p>
+    <p>Virtual experiments using classical thermofluid concepts</p>
+    <p>Site under construction</p>
 </header>
 
 <main>
